<?xml version="1.0" encoding="utf-8"?>
<!-- Main Activity with Accessibility Support (v1.2.0 Phase 4) -->
<androidx.coordinatorlayout.widget.CoordinatorLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/rootLayout"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:importantForAccessibility="yes">

  <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/appBarLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:liftOnScroll="true">

    <com.google.android.material.appbar.MaterialToolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      app:title="@string/app_name_short"
      app:subtitle="@string/app_subtitle"
      android:contentDescription="@string/app_name_full" />

    <com.google.android.material.tabs.TabLayout
      android:id="@+id/tabLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:contentDescription="@string/section_quick_toggles"
      app:tabMode="fixed"
      app:tabGravity="fill"
      app:tabIndicatorFullWidth="false"
      app:tabIndicatorAnimationMode="elastic" />

  </com.google.android.material.appbar.AppBarLayout>

  <androidx.viewpager2.widget.ViewPager2
    android:id="@+id/viewPager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/section_settings"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
